bullseye header page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,64 @@
 </head>
 <body>
     <!--Header-->
-
+    <div class=" flex justify-between bg-slate-100 w-full py-3 fixed">
+    <div class="flex justify-start md:ml-24">
+        <p class="mx-6">+2349122995390</p>
+        <p>info@bullseyemanpower.com</p>
+    </div>
+    <div class="flex justify-between w-48 cursor-pointer mr-24 invisible lg:visible">
+        <img class="w-4 h-4 mb-1 rounded-2xl" src="/standup/assets/twitter.png" alt="twitter">
+        <img  class="w-4 h-4 mb-1 rounded-2xl" src="/standup/assets/facebook.jpg" alt="facebook">
+        <img  class="w-4 h-4 mb-1 rounded-2xl" src="/standup/assets/instagram.png" alt="instagram">
+        <img  class="w-4 h-4 mb-1 rounded-2xl" src="/standup/assets/linkedin.png" alt="linkedin">
+        <img  class="w-4 h-4 mb-1 rounded-2xl" src="/standup/assets/youtube.png" alt="youtube">
+        <img  class="w-4 h-4 mb-1 rounded-2xl" src="/standup/assets/pinterest.png" alt="pinterest">
+    </div>
+    </div>
+    
+    <div class="w-full flex justify-evenly mt-12 pt-6 items-center bg-white fixed ">
+        <div class="shrink-0">
+            <img class="w-48" src="/standup/assets/bullseye logo.png" alt="logo">
+        </div>
+        <div class="flex justify-between md:w-96 w-0 invisible lg:visible">
+            <p class="hover:text-blue-500 cursor-pointer
+             hover:underline 
+            hover:decoration-blue-500 hover:decoration-2
+             hover:underline-offset-8 ">Home</p>
+            <p class="hover:text-blue-500 cursor-pointer
+            hover:underline 
+           hover:decoration-blue-500 hover:decoration-2
+            hover:underline-offset-8 ">About</p>
+            <p class="hover:text-blue-500 cursor-pointer
+            hover:underline 
+           hover:decoration-blue-500 hover:decoration-2
+            hover:underline-offset-8 ">Courses</p>
+            <p class="hover:text-blue-500 cursor-pointer
+            hover:underline 
+           hover:decoration-blue-500 hover:decoration-2
+            hover:underline-offset-8 ">Accolades</p>
+            <p class="hover:text-blue-500 cursor-pointer
+            hover:underline 
+           hover:decoration-blue-500 hover:decoration-2
+            hover:underline-offset-8 ">FAQs</p>
+            <p class="hover:text-blue-500 cursor-pointer
+            hover:underline 
+           hover:decoration-blue-500 hover:decoration-2
+            hover:underline-offset-8 ">Contact</p>
+        </div>
+        <div class="flex justify-end md:justify-between items-center w-96 ">
+            <div class="bg-sky-600 cursor-pointer rounded-3xl hover:bg-sky-700 w-12 h-4 md:w-36 md:h-10">
+                <p class="text-white text-center invisible md:visible pt-1">Register Now</p>
+            </div>
+            <div class="mx-3 bg-sky-600 cursor-pointer rounded-3xl hover:bg-sky-700 w-12 h-4 md:w-40 md:h-10">
+                <p class="text-white text-center invisible md:visible pt-1 ">Partner With Us </p>
+            </div>
+            <div class="visible md:invisible">
+                <img class="w-9" src="/standup/assets/hamburger.png" alt="Home icon">
+            </div>
+        </div>
+       
+    </div>
 
     <!--Main 1-->
 
