--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+        <script src="https://cdn.tailwindcss.com"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+          integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+          crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="style.css">
+        <script src="https://kit.fontawesome.com/6a08c93b89.js" crossorigin="anonymous"></script> 
+    </head>
+
 <body>
     <!--Header-->
 
@@ -17,7 +22,62 @@
     <!--Main 2-->
 
     <!--Footer-->
+<!-- <footer 2 -->
 
+<style>
+    .btn-holder{
+      position: absolute;
+      right: 5px;
+      bottom: 70px;
+      width: 70px;
+      height:100px;
+    }
+
+    .brands {
+      width: 40px;
+      height: 40px;
+      background-color: #1977cc;
+      border-radius: 60%;
+      text-align: center;
+      padding: 8px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: row;
+    }
+
+    .brands i {
+      color: white;
+      font-weight: bold;
+      font-size: 18px;
+    }
+
+    .btn{
+      border-radius: 8px;
+      width: 50px;
+      height: 50px;
+    }
+  </style>
+</head>
+
+<body style="position: relative">
+  <div class="grid grid-cols-2 w-full p-10">
+    <div class="">
+        <h2>&copy;Copyright <b>Bullseye Digital Manpower.</b> All Rights Reserved</h2>
+    </div>
+    <div class="space-x-5 flex flex-row justify-end ">
+      <a href="a" class="brands"><i class="fa-brands fa-twitter"></i></a>
+      <a href="a" class="brands"><i class="fa-brands fa-facebook"></i></a>
+      <a href="a" class="brands"><i class="fa-brands fa-instagram"></i></a>
+      <a href="a" class="brands"><i class="fa-brands fa-linkedin"></i></a>
+      <a href="a" class="brands"><i class="fa-brands fa-tiktok"></i></a>
+    </div>
+  </div>
+<div class="btn-holder">
+  <a href="a" class="brands btn"><i class="fa-solid fa-arrow-up"></i></a>
+</div>
+</body>
+</html>   
     
 </body>
 </html>
