--- a/index.html
+++ b/index.html
@@ -7,16 +7,42 @@
     <title>Document</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap');
+      </style>
 </head>
 <body>
-    <!--Header-->
-
-
-    <!--Main 1-->
-
-    <!--Main 2-->
-
-    <!--Footer-->
+    <footer class="flex flex-col md:flex-row">
+        <div class="m-8 p-4">
+            <h2><b>Bullseye Digital Manpower</b></h2>
+            <p>3-6 Alh. Adejumo Avenue,<br>Illupeju, Lagos, <br> Nigeria</p>
+            <br>
+            <b>Phone:</b>+2349122995390 <br> <b>Email:</b>partners@bullseyemanpower.com
+        </div>
+        <br>
+        <div class="m-8 p-4">
+            <strong>Useful Links</strong>
+            <ul>
+                <li class="space-x-2 p-2"><i class="fa fa-chevron-right" aria-hidden="true"></i><a href="#Home">Home</a></li>
+                <li class="space-x-2 p-2"><i class="fa fa-chevron-right" aria-hidden="true"></i><a href="#about">About Us</a></li>
+                <li class="space-x-2 p-2"><i class="fa fa-chevron-right" aria-hidden="true"></i><a href="#services">Our Courses</a></li>
+                <li class="space-x-2 p-2"><i class="fa fa-chevron-right" aria-hidden="true"></i><a href="#departments">Accolades</a></li>
+                <li class="space-x-2 p-2"><i class="fa fa-chevron-right" aria-hidden="true"></i><a href="#faq">FAQs</a></li>
+            </ul>
+        </div>
+        <br>
+        <div class="m-8 p-4">
+            <b>Join Our Newsletter</b>
+            <p>Get the latest news and updates from us</p>
+            <span class="flex">
+                <form class="border-solid border-2 border-sky-200 rounded-2l" action="email" method="get">    
+                    <input type="email" name="email">
+                </form>
+                <button class="bg-blue-300 rounded-lg width-full align-middle"><strong>Subscribe</strong></button>
+            </span> 
+        </div>
+    </footer>
 
     
 </body>
