--- a/index.html
+++ b/index.html
@@ -7,13 +7,37 @@
     <title>Document</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <!--Header-->
 
 
     <!--Main 1-->
+    <section class="w-full">
+        <img src="./assets/slider1.jpg" class="h-auto">
+            <div class="p-2 fixed inset-y-0 left-0 w-16 my-36 border  ">
+                <div class="text-5xl text-blue-900">
+                    <a href="a"><i class="fa-brands fa-facebook-square" aria-hidden="true"></i></a>
+                </div>
+                <div class="text-5xl text-blue-500">
+                    <a href="a"><i class="fa-brands fa-twitter-square" aria-hidden="true"></i></a>
+                </div>
+                <div class="text-5xl text-sky-600"> 
+                    <a href="a"><i class="fa-brands fa-instagram-square" aria-hidden="true"></i></a>
+                </div>
+                <div class=""> 
+                    <a href="a"><img src="./assets/Facebook_Messenge.svg" class="w-11 h-10 rounded" alt="logo"></a>
+                </div>
+                <div class="text-5xl text-green-500"> 
+                    <a href="a"><i class="fa-brands fa-whatsapp-square" aria-hidden="true"></i></a>
+                </div>
+                <div class="text-5xl text-red-600">
+                    <a href="a"><i class="fa-brands fa-pinterest-square" aria-hidden="true"></i></a>
+                </div>             
+            </div> 
 
+    </section>
     <!--Main 2-->
 
     <!--Footer-->
