--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   </style>
 
     <!--Header-->
-    <div class=" flex justify-between bg-slate-100 w-full py-3 fixed">
+    <div class=" flex justify-between bg-slate-100 w-full top-0 py-3 fixed">
     <div class="flex justify-start md:ml-24">
         <p class="mx-6">+2349122995390</p>
         <p>info@bullseyemanpower.com</p>
@@ -68,7 +68,7 @@
     </div>
     </div>
     
-    <div class="w-full flex justify-evenly mt-12 pt-6 items-center bg-white fixed ">
+    <div class="w-full flex justify-evenly mt-4 py-4 items-center bg-white fixed ">
         <div class="shrink-0">
             <img class="w-48" src="/standup/assets/bullseye logo.png" alt="logo">
         </div>
@@ -116,7 +116,7 @@
     <!--Main 1-->
     <section class="w-full">
         <img src="./assets/slider1.jpg" class="h-auto">
-            <div class="p-2 fixed inset-y-0 left-0 w-16 my-36 border  ">
+            <div class="p-2 fixed inset-y-0 left-0 w-16 my-36 border bg-white ">
                 <div class="text-5xl text-blue-900">
                     <a href="a"><i class="fa-brands fa-facebook-square" aria-hidden="true"></i></a>
                 </div>
@@ -171,7 +171,7 @@
         </div>
     </footer>
 
-<!--footer-2--!>
+<!--footer-2-->
 <div style="position: relative">
   <div class="grid grid-cols-2 w-full p-10">
     <div class="">
